[project]
name = "executor"
version = "0.1.0"
description = "PISA Scenario Queue Executor"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "requests>=2.32.5",
    "runner>=0.1.1",
]

[tool.uv.sources]
runner = { git = "https://github.com/PISA-Hut/runner.git" }
