[project]
name = "executor"
version = "0.1.1"
description = "PISA Scenario Queue Executor"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "simcore>=0.2.0",
]

[tool.uv.sources]
simcore = { git = "https://github.com/pisa-hut/simulation-core.git" }
